# pcre-net

./: .editorconfig  .gitattributes  .gitignore  LICENCE  LICENCE.md  README  README.md  appveyor.yml  azure-pipelines.yml
src/: CMakeLists.txt  Directory.Build.props  Directory.Build.targets  NuGetReadme.md  PCRE.NET.sln  PCRE.NET.sln.DotSettings  PCRE.NET.slnx  PCRE.NET.snk  update-pcre2.sh
src/PCRE/: Makefile.in  RunGrepTest.bat  RunTest.bat  aclocal.m4  config.h  configure  ltmain.sh
src/PCRE.NET/: .editorconfig  IInternalRegexWrapper.cs  IPcreGroup.cs  IPcreGroupCollection.cs  IPcreGroupList.cs  PCRE.NET.csproj  PCRE.NET.targets  Pcre.cs  PcreBackslashR.cs  PcreBuildInfo.cs  PcreCallout.cs  PcreCalloutInfo.cs  PcreCalloutResult.cs  PcreErrorCode.cs  PcreException.cs  PcreExtraCompileOptions.cs  PcreGroup.cs  PcreInformation.cs  PcreJitCompileOptions.cs  PcreJitStack.cs  PcreMatch.cs  PcreMatchBuffer.cs  PcreMatchBuffer8Bit.cs  PcreMatchBufferUtf8.cs  PcreMatchException.cs  PcreMatchOptions.cs  PcreMatchParameters.cs  PcreMatchResult.cs  PcreMatchSettings.cs  PcreNewLine.cs  PcreOptimizationDirective.cs  PcreOptions.cs  PcrePatternInfo.cs  PcrePossibleMatch.cs  PcreRefCallout.cs  PcreRefCallout8Bit.cs  PcreRefCalloutUtf8.cs  PcreRefGroup.cs  PcreRefGroup8Bit.cs  PcreRefGroupUtf8.cs  (+20 more)
src/PCRE.NET.Analyzers/: PCRE.NET.Analyzers.csproj  ReplacementPattern.Analyzers.cs  ReplacementPatternInterceptorGenerator.cs  ReplacementPatternSet.cs  StaticCallsInterceptorGenerator.cs  StaticMatchInterceptorGenerator.cs
src/PCRE.NET.Analyzers/Analyzers/: CodeWriter.cs  Extensions.cs  GeneratorHelpers.cs  PcreCallsInterceptorGenerator.cs  ReplacementPattern.Analyzers.cs  ReplacementPatternInterceptorGenerator.cs  ReplacementPatternSet.cs  StaticCallsInterceptorGenerator.cs
src/PCRE.NET.Analyzers/Properties/: AssemblyInfo.cs
src/PCRE.NET.Analyzers/Support/: CodeAnalysis.cs  CodeWriter.cs  Extensions.cs  GeneratorHelpers.cs
src/PCRE.NET.Benchmarks/: AllocationTest.cs  AutoCalloutBenchmark.cs  Configs.cs  HelloGoodbyeBenchmark.cs  MemoryBenchmark.cs  NetCoreAndStandardConfig.cs  PCRE.NET.Benchmarks.csproj  Program.cs  RegexReduxBenchmark.Data.cs  RegexReduxBenchmark.IsMatch.cs  RegexReduxBenchmark.Matches.cs
src/PCRE.NET.InternalAnalyzers/: CodeWriter.cs  ForwardTo8BitGenerator.cs  PCRE.NET.InternalAnalyzers.csproj
src/PCRE.NET.InternalAnalyzers/Analyzers/: ForwardTo8BitGenerator.cs
src/PCRE.NET.InternalAnalyzers/Support/: Extensions.cs
src/PCRE.NET.Native/: PCRE.NET.Native.vcxproj  PCRE.NET.Native.vcxproj.filters  pcre2config.h  pcrenet.h  pcrenet_compile.c  pcrenet_compile.cpp  pcrenet_convert.c  pcrenet_convert.cpp  pcrenet_info.c  pcrenet_info.cpp  pcrenet_match.c  pcrenet_match.cpp  pcrenet_match.h  pcrenet_misc.cpp  pcrenet_substitute.c  pcrenet_substitute.cpp
src/PCRE.NET.Native/compile/: config.16bit.h  config.8bit.h  pcre2_auto_possess.16bit.c  pcre2_auto_possess.8bit.c  pcre2_chartables.16bit.c  pcre2_chartables.8bit.c  pcre2_chkdint.16bit.c  pcre2_chkdint.8bit.c  pcre2_compile.16bit.c  pcre2_compile.8bit.c  pcre2_compile_cgroup.16bit.c  pcre2_compile_cgroup.8bit.c  pcre2_compile_class.16bit.c  pcre2_compile_class.8bit.c  pcre2_config.16bit.c  pcre2_config.8bit.c  pcre2_context.16bit.c  pcre2_context.8bit.c  pcre2_convert.16bit.c  pcre2_convert.8bit.c  pcre2_dfa_match.16bit.c  pcre2_dfa_match.8bit.c  pcre2_error.16bit.c  pcre2_error.8bit.c  pcre2_extuni.16bit.c  pcre2_extuni.8bit.c  pcre2_find_bracket.16bit.c  pcre2_find_bracket.8bit.c  pcre2_jit_compile.16bit.c  pcre2_jit_compile.8bit.c  pcre2_maketables.16bit.c  pcre2_maketables.8bit.c  pcre2_match.16bit.c  pcre2_match.8bit.c  pcre2_match_data.16bit.c  pcre2_match_data.8bit.c  pcre2_match_next.16bit.c  pcre2_match_next.8bit.c  pcre2_newline.16bit.c  pcre2_newline.8bit.c  (+32 more)
src/PCRE.NET.Native/pcre2/: pcre2_auto_possess.utf16.c  pcre2_auto_possess.utf8.c  pcre2_compile.utf16.c  pcre2_context.utf16.c  pcre2_context.utf8.c  pcre2_convert.utf16.c  pcre2_convert.utf8.c  pcre2_dfa_match.utf16.c  pcre2_dfa_match.utf8.c  pcre2_error.utf16.c  pcre2_find_bracket.utf8.c  pcre2_jit_compile.utf8.c  pcre2_maketables.utf16.c  pcre2_match.utf16.c  pcre2_match_data.utf16.c  pcre2_newline.utf8.c  pcre2_ord2utf.utf16.c  pcre2_pattern_info.utf16.c  pcre2_script_run.utf8.c  pcre2_substitute.utf8.c  pcre2_substring.utf16.c  pcre2_substring.utf8.c  pcre2_ucd.utf8.c  pcre2_valid_utf.utf16.c  pcre2_xclass.utf16.c  pcre2_xclass.utf8.c
src/PCRE.NET.Native/wrappers/: pcre2_auto_possess.utf16.c  pcre2_auto_possess.utf8.c  pcre2_chartables.utf16.c  pcre2_chartables.utf8.c  pcre2_chkdint.utf16.c  pcre2_chkdint.utf8.c  pcre2_compile.utf16.c  pcre2_compile.utf8.c  pcre2_compile_class.utf16.c  pcre2_compile_class.utf8.c  pcre2_config.utf16.c  pcre2_config.utf8.c  pcre2_context.utf16.c  pcre2_context.utf8.c  pcre2_convert.utf16.c  pcre2_convert.utf8.c  pcre2_dfa_match.utf16.c  pcre2_dfa_match.utf8.c  pcre2_error.utf16.c  pcre2_error.utf8.c  pcre2_extuni.utf16.c  pcre2_extuni.utf8.c  pcre2_find_bracket.utf16.c  (+43 more)
src/PCRE.NET.Tests/: ManualTests.cs  ModuleInitializer.cs  PCRE.NET.Tests.csproj  PcreBuildInfoTests.cs  PcreInformationTests.cs  PcrePatternInfoTests.cs  PcreTests.cs  packages.config
src/PCRE.NET.Tests.Integration/: .gitignore  IntegrationTests.Helpers.cs  IntegrationTests.cs  PCRE.NET.Tests.Integration.csproj  nuget.config
src/PCRE.NET.Wrapper/: AssemblyInfo.cpp  CalloutData.cpp  CalloutData.h  CalloutFlags.h  CalloutInfo.cpp  CalloutInfo.h  CompileContext.cpp  CompileContext.h  CompileContextOptions.h  ConfigKey.h  ConvertContext.cpp  ConvertContext.h  ConvertOptions.h  InfoKey.h  InternalRegex.cpp  InternalRegex.h  JitCompileOptions.h  JitStack.cpp  JitStack.h  MatchContext.cpp  MatchContext.h  MatchData.cpp  MatchData.h  MatchException.h  MatchOffsets.cpp  MatchOffsets.h  MatchResult.cpp  MatchResult.h  MatchResultCode.h  PCRE.NET.Wrapper.cpp  PCRE.NET.Wrapper.h  PCRE.NET.Wrapper.vcxproj  PCRE.NET.Wrapper.vcxproj.filters  PatternInfoKey.h  PatternOptions.h  PcreBuild.cpp  PcreBuild.h  PcreConfigKey.h  PcrePattern.cpp  PcrePattern.h  (+6 more)
(+97 files in other folders)
